# py-tg-chat

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ai.py  app.py  conv.py  pyproject.toml  requirment.txt
revChatGPT/: Official.py
utils/: serp.py
